--- a/total_config.json
+++ b/total_config.json
@@ -1,10 +1,10 @@
 {
-    "folder": "TEST",
-    "optimizers": ["BO_sklearn"],
-    "fids": [15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
-    "iids": [1],
+    "folder": "testlogf16i0dim10linearpcabo",
+    "optimizers": ["linearPCABO"],
+    "fids": [16],
+    "iids": [0],
     "dims": [10],
-    "reps": 10,
+    "reps": 1,
     "lb": -5,
     "ub": 5,
     "extra": "Tests"
