--- a/total_config.json
+++ b/total_config.json
@@ -1,7 +1,7 @@
 {
     "folder": "testbosk",
     "optimizers": ["BO_sklearn"],
-    "fids": [21],
+    "fids": [20, 21],
     "iids": [0],
     "dims": [10],
     "reps": 1,
