Adding details for reproducibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ attrs==21.4.0
 azure-common==1.1.28
 azure-nspkg==3.0.2
 azure-storage==0.32.0
-bayes-optim==0.2.7
 certifi==2021.10.8
 charset-normalizer==2.0.12
 cma==3.2.2
@@ -16,16 +15,14 @@ gpytorch==1.6.0
 idna==3.3
 importlib-metadata==4.11.3
 iniconfig==1.1.1
-ioh==0.3.2.7.2
 isodate==0.6.1
-jax==0.3.10
-jaxlib==0.3.10
+jax>=0.3.10
+jaxlib>=0.3.10
 joblib==1.1.0
 kiwisolver==1.4.2
 matplotlib==3.5.2
 msrest==0.6.21
 multipledispatch==0.6.0
-numpy==1.21.6
 numpyro==0.9.2
 oauthlib==3.2.0
 opt-einsum==3.3.0
@@ -56,3 +53,11 @@ tqdm==4.64.0
 typing_extensions==4.2.0
 urllib3==1.26.9
 zipp==3.8.0
+ioh==0.3.2.6
+paramz==0.9.6
+networkx==2.4
+disjoint_set==0.8.0
+mlflow==2.11.3
+h5py==3.10.0
+coloredlogs==15.0.1
+ruamel.yaml==0.18.6
